# whisper-relay

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/address-review/: SKILL.md
.claude/skills/draft-issue/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/merge-pr/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.github/workflows/: ci.yml
deploy/: README.md  whisper-relay.service
docs/: AGENTS.md  README.md  development-principles.md
docs/adr/: 001-voice-transport-layer.md  002-upstream-integration-boundaries.md  003-kokoro-tts-bm-george.md  004-dual-text-backends.md  005-lifeos-owned-chat-client.md  AGENTS.md
docs/specs/standards/: AGENTS.md  code-conventions.md  (+1 more)
scripts/: install-autostart.sh  install-systemd-tailscale.sh  install-systemd-user.sh  install-systemd.sh  setup-kokoro.sh  setup-tailscale.sh
src/voice_gateway/: __init__.py  audio.py  cancel.py  config.py  logging.py  main.py  models.py  storage.py  text.py  turns.py
static/: app.js  diag.html  index.html  style.css
tests/: conftest.py  test_agent_backend.py  test_audio.py  test_config.py  test_conversations.py  test_health.py  test_health_backends.py  test_lifeos_client.py  test_modality.py  test_model_override.py  test_personas.py  test_root_redirect.py  test_storage.py  test_text.py  test_text_backend.py  test_tts_adapter.py  test_turn_cancel.py  test_turns.py  test_voice_routes.py  test_voice_transcript.py  test_voice_turn.py  test_voice_turn_stream.py  test_warmup.py
tests/fixtures/: lifeos_handoff.json  lifeos_sse.txt
(+11 files in other folders)
